@@ -1,5 +1,11 @@
 2003-05-22  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Check if the file exists before extracting, and ask the user what
+	they want to do.
+
+2003-05-22  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	Rename the Deselect All menu item.
 
